--- a/index.html
+++ b/index.html
@@ -149,6 +149,9 @@
                             <option value="Writing">Writing</option>
                             <option value="Design">Design</option>
                             <option value="Marketing">Marketing</option>
+                            <option value="Utility Suite">Utility Suite</option>
+                            <option value="Mental Health">Mental Health</option>
+                            <option value="Content Detection">Content Detection</option>
                         </select>
                     </div>
                     <div class="view-toggle">
@@ -156,8 +159,21 @@
                     </div>
                 </div>
                 
-                <div id="toolsContainer" class="tools-container">
-                    <!-- Tools will be populated by JavaScript -->
+                <!-- Underrated AI Tools Section -->
+                <div class="underrated-section">
+                    <h2>🔥 Underrated AI Tools - Free & No Signup Required</h2>
+                    <p>Discover powerful AI tools that don't require registration or payment</p>
+                    <div id="underratedToolsContainer" class="tools-container">
+                        <!-- Underrated tools will be populated by JavaScript -->
+                    </div>
+                </div>
+                
+                <!-- Main Tools Section -->
+                <div class="main-tools-section">
+                    <h2>⭐ Popular AI Tools</h2>
+                    <div id="toolsContainer" class="tools-container">
+                        <!-- Tools will be populated by JavaScript -->
+                    </div>
                 </div>
             </div>
         </section>
@@ -395,6 +411,9 @@
                             <option value="Writing">Writing</option>
                             <option value="Design">Design</option>
                             <option value="Marketing">Marketing</option>
+                            <option value="Utility Suite">Utility Suite</option>
+                            <option value="Mental Health">Mental Health</option>
+                            <option value="Content Detection">Content Detection</option>
                         </select>
                     </div>
                     <div class="form-group">
